@@ -62,6 +62,9 @@ Fix corner case failing to calculate lgamma values and the correspoinding log er
 Influence count per bucket for metric population analyses was wrong and lead to wrong influencer scoring ({pull}#150[#150])
 Fix a possible SIGSEGV for jobs with multivariate by fields enabled which would lead to the job failing ({pull}#170[#170])
 
+Correct the model bounds and typical value calculation for time series models which use a multimodal distribution.
+This issue could cause "Unable to bracket left percentile =..." errors to appear in the logs. ({pull}#176[#176])
+
 === Regressions
 
 === Known Issues
